--- a/webapp/src/components/Administration/AdminDashboard/AdminDashboard.module.scss
+++ b/webapp/src/components/Administration/AdminDashboard/AdminDashboard.module.scss
@@ -61,6 +61,7 @@
   font-weight: bold;
   font-size: 2rem;
   color: #00bf00;
+  align-items: center;
 }
 
 .indEdit{
@@ -68,6 +69,7 @@
   font-weight: bold;
   font-size: 1.25rem;
   color: #bfbf00;
+  align-items: center;
 }
 
 .indDelete{
@@ -75,6 +77,7 @@
   font-weight: bold;
   font-size: 1.25rem;
   color: #bf0000;
+  align-items: center;
 }
 
 .optionleft{
@@ -91,4 +94,142 @@
 .mood{
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.modalAdmin {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 2rem;
+  box-shadow: var(--shadow2);
+  position: relative;
+  width: 40vw;
+  background-color: white;
+  height: 26.5rem;
+  .title {
+    text-align: center;
+
+    font-weight: bold;
+    color: var(--orange2);
+    font-size: 1.8rem;
+  }
+  .subtitle {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 1.3rem;
+    color: black;
+    opacity: 0.8;
+  }
+  .accept {
+    margin-top: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    cursor: pointer;
+    padding: 0.5rem;
+    padding-inline: 1.2rem;
+    border-radius: 0.3rem;
+    background-color: var(--orange2);
+    width: fit-content;
+    font-size: 1.3rem;
+  }
+}
+
+.modalAdmin2 {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 2rem;
+  box-shadow: var(--shadow2);
+  position: relative;
+  width: 40vw;
+  background-color: white;
+  height: 15.5rem;
+  .title {
+    text-align: center;
+
+    font-weight: bold;
+    color: var(--orange2);
+    font-size: 1.8rem;
+  }
+  .subtitle {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 1.3rem;
+    color: black;
+    opacity: 0.8;
+  }
+  .accept {
+    margin-top: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    cursor: pointer;
+    padding: 0.5rem;
+    padding-inline: 1.2rem;
+    border-radius: 0.3rem;
+    background-color: var(--orange2);
+    width: fit-content;
+    font-size: 1.3rem;
+  }
+}
+
+.modalerror {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 2rem;
+  box-shadow: var(--shadow2);
+  position: relative;
+  width: 40vw;
+  background-color: red;
+  height: 13rem;
+  .title {
+    text-align: center;
+
+    font-weight: bold;
+    color: var(--dark1);
+    font-size: 1.8rem;
+  }
+
+  .accept {
+    margin-top: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    cursor: pointer;
+    padding: 0.5rem;
+    padding-inline: 1.2rem;
+    border-radius: 0.3rem;
+    background-color: var(--orange2);
+    width: fit-content;
+    font-size: 1.3rem;
+  }
+}
+
+.cancel {
+  margin-top: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+
+  cursor: pointer;
+  padding: 0.5rem;
+  padding-inline: 1.2rem;
+  border-radius: 0.3rem;
+  background-color: var(red);
+  width: fit-content;
+  font-size: 1.3rem;
+}
+
+.inputfield {
+  font-size: 1rem;
+  width: 90%;
+  padding: 0.3rem;
+  background-color: gray;
+  color: var(--dark2);
+  border-radius: 0.5rem;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 0.5rem;
 }
