--- a/webapp/src/components/pages/mainPage/MainPage.module.scss
+++ b/webapp/src/components/pages/mainPage/MainPage.module.scss
@@ -31,6 +31,7 @@
 .title {
   margin-top: 25rem;
   position: absolute;
+  line-height: 3.1rem;
   font-size: 2.5rem;
   font-family: "Montserrat-Light";
   filter: drop-shadow(0px 0px 5rem var(--white));
