--- a/webapp/src/components/pages/LoginPage/LoginPage.module.scss
+++ b/webapp/src/components/pages/LoginPage/LoginPage.module.scss
@@ -125,3 +125,38 @@ h3:nth-child(4) {
     text-decoration: underline 1px solid var(--orange2);
   }
 }
+
+
+
+.modalerror {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 2rem;
+  box-shadow: var(--shadow2);
+  position: relative;
+  width: 40vw;
+  background-color: red;
+  height: 13rem;
+  .titleError {
+    text-align: center;
+
+    font-weight: bold;
+    color: var(--dark1);
+    font-size: 1.8rem;
+  }
+
+  .accept {
+    margin-top: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    cursor: pointer;
+    padding: 0.5rem;
+    padding-inline: 1.2rem;
+    border-radius: 0.3rem;
+    background-color: var(--orange2);
+    width: fit-content;
+    font-size: 1.3rem;
+  }
+}
