--- a/webapp/src/components/pages/ContactPage/ContactPage.module.scss
+++ b/webapp/src/components/pages/ContactPage/ContactPage.module.scss
@@ -28,11 +28,11 @@
 }
 
 .subtitle {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   margin-top: 1rem;
   opacity: 0;
-  display: flex;
-  flex-direction: row;
   align-items: center;
   justify-self: center;
   justify-content: center;
@@ -40,4 +40,13 @@
   letter-spacing: 0.05rem;
   color: var(--white1);
   animation: appear 1s ease 0.4s forwards;
+  p {
+    text-decoration: line-through;
+  }
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
